--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Raleway', sans-serif;
-    font-size: 25px;
+    font-weight: 300;
+    font-size: 30px;
     background-color: gainsboro;
 }
 
